# django-q2

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
django-q2/: pyproject.toml
django_q/: __init__.py  apps.py  tasks.py  utils.py
django_q/tests/: test_scheduler.py
