[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-q2"
version = "1.6.1"
packages = [
    { include = "django_q" },
]
description = "A multiprocessing distributed task queue for Django"
authors = ["Stan Triepels <django-q2@stantriepels.com>", "Ilan Steemers <koed00@gmail.com>"]
maintainers = ["Stan Triepels <django-q2@stantriepels.com>"]
license = "MIT"
readme = 'README.rst'

repository = "https://github.com/GDay/django-q2"
homepage = "https://django-q2.readthedocs.org"
documentation = "https://django-q2.readthedocs.org"

keywords = ["django", "distributed", "multiprocessing", "queue", "scheduler"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: System :: Distributed Computing',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ['CHANGELOG.md']

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-picklefield = "^3.1"
urllib3 = "^2.5.0"

[tool.poetry.extras]
testing = []

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
Sphinx = "^4.0.2"
pytest-cov = "^4.0.0"
black = "^24.3.0"
isort = {extras = ["requirements_deprecated_finder"], version = "^5.10.1"}

[tool.isort]
profile = "black"
multi_line_output = 3
