[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-q2"
version = "1.6.1"
packages = [
    { include = "django_q" },
]
description = "A multiprocessing distributed task queue for Django"
authors = ["Stan Triepels <django-q2@stantriepels.com>", "Ilan Steemers <koed00@gmail.com>"]
maintainers = ["Stan Triepels <django-q2@stantriepels.com>"]
license = "MIT"
readme = 'README.rst'

repository = "https://github.com/GDay/django-q2"
homepage = "https://django-q2.readthedocs.org"
documentation = "https://django-q2.readthedocs.org"

keywords = ["django", "distributed", "multiprocessing", "queue", "scheduler"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: System :: Distributed Computing',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ['CHANGELOG.md']

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-picklefield = "^3.1"
urllib3 = "^2.5.0"

# Optional dependencies for testing
django-redis = { version = "^5.2.0", optional = true }
croniter = { version = "^2.0.1", optional = true }
hiredis = { version = "^2.0.0", optional = true }
psutil = { version = "^5.9.2", optional = true }
pymongo = { version = "^4.2.0", optional = true }
blessed = { version = "^1.19.1", optional = true }
redis = { version = "^4.3.4", optional = true }
setproctitle = { version = "^1.3.2", optional = true }

[tool.poetry.extras]
testing = ["django-redis", "croniter", "hiredis", "psutil", "pymongo", "blessed", "redis", "setproctitle"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
Sphinx = "^4.0.2"
pytest-cov = "^4.0.0"
black = "^24.3.0"
isort = {extras = ["requirements_deprecated_finder"], version = "^5.10.1"}

[tool.isort]
profile = "black"
multi_line_output = 3
