[tool.poetry.dependencies]
python = ">=3.9,<4"
django = { version = ">=3.2, <6", allow-prereleases = true}
django-picklefield = "^3.1"
urllib3 = "^2.5.0"

blessed = { version = "^1.19.1", optional = true }
hiredis = { version = "^2.0.0", optional = true }
psutil = { version = "^5.9.2", optional = true }
django-redis = { version = "^5.2.0", optional = true }
iron-mq = { version = "^0.9", optional = true }
pymongo = { version = "^4.2.0", optional = true }
croniter = { version = "^2.0.1", optional = true }
django-q-rollbar = {version = ">=0.1", optional = true}
django-q-sentry = {version = ">=0.1", optional = true}
redis = {version = "^4.3.4", optional = true}
setproctitle = {version = "^1.3.2", optional = true}
importlib-metadata = {version = ">=3.6", python = "<3.10"} 